--- a/src/app/dashboard/card/card.component.css
+++ b/src/app/dashboard/card/card.component.css
@@ -1,3 +1,75 @@
-.example-card {
-    max-width: 400px;
-  }
+.card {
+  max-width: 350px;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+  display: flex;
+  flex-direction: column;
+  background-color: #E8E8E8;
+  color: #363636;
+  min-height: 400px;
+  text-align: center;
+}
+
+.card.dark{
+  background-color: #363636;
+  color: #E8E8E8;
+}
+
+.card:hover {
+  background-color: #CFCFCF;
+}
+
+.card.dark:hover{
+  background-color: #4F4F4F;
+}
+
+img {
+  max-width: auto;
+  max-height: 200px;
+  border-radius: 5px;
+  border: 2px solid #836FFF;
+}
+
+.greate {
+  color: #009ACD;
+}
+
+.amazing {
+  color: #836FFF;
+}
+
+.header {
+  margin: auto;
+  display: flex;
+  width: 100%;
+  min-height: 10%;
+  font-weight: 500;
+  
+}
+
+.mat-card-header {
+  display: flex;
+  flex-direction: column;
+}
+
+/* 
+.image {
+  min-height: 40%;
+  background-color: darksalmon;
+}
+
+.content {
+  padding: 5px;
+  min-height: 40%;
+  background-color: lightgreen;
+}
+
+.footer {
+  text-align: center;
+  min-height: 10%;
+  width: 100%;
+  background-color: burlywood;
+} */
