--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,13 @@
 <!--TODO: melhorar o layout dos cards para exibir ao menos 2 por linha em telas > md, e pequenas (sm) 1 -->
-<app-card [card]="card" *ngFor="let card of cards"></app-card>
+<div class="loading">
+  <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+</div>
+<div class="dashboard">
+  <app-card
+    [hidden]="loading"
+    fxLayoutGap
+    [card]="card"
+    *ngFor="let card of cards"
+    [isDark]="isDark"
+  ></app-card>
+</div>
